# Wallet

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  template.xlsx  wallet.db
.github/workflows/: python-package.yml
app/: main.py
db/: config.py
domain/: charts.py  momentum.py  search.py  valuation.py
domain/entities/: __init__.py  excel_models.py  models.py
infrastructure/: __init__.py  excel_repository.py  market_data_yfinance.py
merge_data_tmp/: merge_transactions.py
src/mywallet/db/: README.md  __init__.py  config.py  session.py
src/mywallet/ui/: __init__.py  navigation.py
src/mywallet/ui/features/transaction/: __init__.py  transaction_form.py  transaction_state.py
src/mywallet/ui/pages/: __init__.py  transaction.py
src/mywallet/ui/utils/: __init__.py  dialog.py  progress_bar.py  searchbar.py
src/mywallet/wallet/model/: __init__.py  asset.py  category.py  place.py  price.py  transaction.py
src/mywallet/wallet/repository/: __init__.py  assets.py  category.py  place.py  price.py  transaction.py
src/wallet/db/: __init__.py
tests/db/: config_test.py  session_test.py
tests/ui/features/transaction/: transaction_state_test.py
tmp/yfinance_cache/: cookies.db  tkr-tz.db
ui/: streamlit_app.py
ui/pages/: __init__.py  momentum.py  search.py  valuation.py
