[project]
name = "wallet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "streamlit>=1.49.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wallet"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
